--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -110,143 +110,11 @@
               </form>
               <footer>
                 <div id="copyright" class="mt-3 flex items-center justify-center p-8">
-                    <p title="2.13.5.0">© Booker 2025 - CD2</p>
+                    <p>&copy; Booker 2025 - CD2</p>
                 </div>
                 </footer>
             </div>
           </div>
-
-
-
-
-<!--<div class="modal fade" id="verifyModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Two-Factor Authentication</h5>
-            </div>
-            <div class="modal-body">
-                <p>
-                    As part of regular updates to the Booker Admin Portal, you will now be required to enter a mobile number for use with Two-Factor Authentication.
-                </p>
-                <p>Please enter your mobile number below. Once your number has been updated, you will be sent a One-Time Passcode to verify this is correct.</p>
-                <div id="errorMsg"></div>
-                <div class="form-group row">
-                    <label for="colFormLabel" class="col-sm-4 col-form-label">Mobile Number <span class="asterisk">*</span></label>
-                    <div class="col-sm-8">
-                        <input type="text" id="mobileNumber" name="mobileNumber" data-valid="false" class="col-8 form-control phone-number" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==15) return false;">
-                    </div>
-                </div>
-                <div class="form-group row mt-3">
-                    <label for="colFormLabel" class="col-sm-4 col-form-label">Confirm Mobile Number <span class="asterisk">*</span></label>
-                    <div class="col-sm-8">
-                        <input type="text" id="confirmMobileNumber" name="confirmMobileNumber" data-valid="false" class="col-8 form-control phone-number">
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn green-btn update-mobile">Update</button>
-            </div>
-        </div>
-    </div>
-</div>-->
-
-<script>
-    $(function () {
-
-        toggleSubmit();
-
-        $('#mobileNumber, #confirmMobileNumber').on('blur', function () {
-            var value = $(this).val();
-
-            //validateMobile($(this));
-            $(this).data("valid", validateMobile($(this)));
-            toggleSubmit();
-
-            if ($(this).data("valid") == true) {
-                $(this).removeClass("error-value");
-            }
-            else {
-                $(this).addClass("error-value");
-            }
-        });
-
-        function validateMobile($this) {
-            $('#errorMsg').html('');
-            var content = '<p class="mb-3 badge badge-danger"><i class="fas fa-info-circle mr-1"></i>';
-            var value = $this.val();
-
-            if (value == '') {
-                $('#errorMsg').html(content + 'This is a required field. You must enter a UK based Mobile number</p>');
-                return false;
-            }
-
-            regexp = new RegExp(/^(07\d{8,12}|\+447\d{7,15})$/);
-            if (!regexp.test(value)) {
-                $('#errorMsg').html(content + 'You must enter a UK based mobile number</p>');
-                return false;
-            }
-
-            if (($this.prop('id') == 'confirmMobileNumber') && value != $('#mobileNumber').val()) {
-                $('#errorMsg').html(content + 'Mobile Numbers do not match. Both numbers should match exactly</p>');
-                return false;
-            }
-
-            return true;
-        }
-
-        function toggleSubmit() {
-            if ($('#mobileNumber').data("valid") == true && $('#confirmMobileNumber').data("valid") == true) {
-                $('#verifyModal .update-mobile').prop('disabled', false)
-            }
-            else {
-                $('#verifyModal .update-mobile').prop('disabled', true)
-            }
-            console.log($('#mobileNumber').val());
-
-        }
-
-        $('.update-mobile').click(function (e) {
-
-            var uid = '';
-            var mobileNumber = $('#mobileNumber').val();
-
-            $.ajax({
-                type: "POST",
-                url: '/api/sitecore/PortalLogin/UpdateMobileNumber',
-                data: JSON.stringify({ uid: uid, mobileNumber: mobileNumber }),
-                contentType: "application/json; charset=utf-8"
-            })
-                .done(function (data) {
-                    if (data.success) {
-                        window.location.assign(data.redirectUrl);
-                    }
-                })
-                .fail(function (xhr, textStatus, errorThrown) {
-                    console.log(xhr.responseText);
-                });
-
-            e.preventDefault();
-        });
-    });
-</script>
-
-
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
-<script nonce="M4fMIl0xx6RTkbNtlaQRP6vVQKRLsQ8aNgjSjYyilfk=">
-
-    var showModal = '';
-
-    $(function () {
-
-        if (showModal != '') {
-            $('#verifyModal').modal();
-        }
-
-    });
-
-</script>
 
     </body>
 </html>
