--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -14,7 +14,10 @@
                 extend: {
                   colors: {
                     'booker': '#2356AA',
-                  }
+                  },
+                   fontFamily: {
+                    'lato': ['Lato', 'sans-serif']
+                   }
                 }
               }
             }
@@ -55,7 +58,7 @@
     
     </head>
 
-    <body class="bg-transparent px-4">
+    <body class="bg-transparent px-4 font-lato">
         <div class="flex justify-center relative top-12 px-4 rounded-[50px] shadow-2xl border-solid border-2 border-gray-50 max-w-3xl m-auto">
             <div class="max-w-md w-full">
                 <div class="flex items-center justify-center p-8">
