--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -102,10 +102,8 @@
               <form class="space-y-4">
                 <div>
                   <label class="block text-sm font-bold text-black-700 mb-1">Verification Code</label>
-                  <input 
-                    type="email" 
-                    class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
-                    required />
+                  <input autocomplete="off" id="VerificationCode" maxlength="6" name="VerificationCode" type="text" value="" 
+                      class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all" required />
                 </div>
 
                 <button class="w-full bg-booker text-white font-bold py-2.5 rounded-md transition-colors">Verify</button>
