--- a/admin-portal/validation.html
+++ b/admin-portal/validation.html
@@ -101,7 +101,7 @@
                      data-size="invisible">
                 </div>
           
-                <button type="submit" class="w-full login-btn bg-booker text-white font-medium py-2.5 rounded-md transition-colors">
+                <button type="submit" class="w-full login-btn bg-booker text-white font-medium px-3 py-1.5 rounded-md transition-colors">
                   Sign In
                 </button>
               </form>
