--- a/admin-portal/forgottenpassword.html
+++ b/admin-portal/forgottenpassword.html
@@ -66,7 +66,7 @@
 
                 <div class="g-recaptcha" data-sitekey="6LfwwIQqAAAAANcF-qB9oAxVzaVwIum45H588zwK" data-callback="onSubmit" data-badge="inline" data-size="invisible"></div>
           
-                <button class="w-full bg-booker text-white font-medium py-2.5 rounded-md transition-colors">
+                <button class="w-full bg-booker text-white font-medium px-3 py-1.5 rounded-md transition-colors">
                   Sign In
                 </button>
               </form>
