--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -106,8 +106,8 @@
                       class="w-full px-3 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all" required />
                 </div>
 
-                <button class="w-full bg-booker text-white font-bold py-2.5 rounded-md transition-colors">Verify</button>
-                <button class="w-full bg-gray text-black font-bold py-2.5 rounded-md transition-colors">Cancel</button>
+                <button class="w-full bg-booker text-white font-bold px-3 py-1.5 rounded-md transition-colors">Verify</button>
+                <button class="w-full bg-gray text-black font-bold px-3 py-1.5 rounded-md transition-colors">Cancel</button>
               </form>
               <footer>
                 <div id="copyright" class="mt-3 flex items-center justify-center p-8">
