--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -7,27 +7,18 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            tailwind.config = {
-              theme: {
-                extend: {
-                  colors: {
-                    'booker': '#2356AA',
-                  },
-                   fontFamily: {
-                    'lato': ['Lato', 'sans-serif']
-                   }
-                }
-              }
+        <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+          <style type="text/tailwindcss">
+            @theme {
+              --color-booker: #2356AA;
             }
-          </script>
+          </style>
         <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
         <!-- Scripts -->
-        <script src="https://www.google.com/recaptcha/enterprise.js"></script>
+        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
 
         <style>
             main#booker_administration_login .login-here .labels h6 {
@@ -60,31 +51,30 @@
     }
 
         </style>
+    </hed>
     
-</head>
-
-    <body class="bg-transparent px-4 font-lato">
+    <body class="bg-transparent px-4 font-[Lato]">
         <div class="flex justify-center relative top-12 px-4 rounded-[50px] shadow-2xl border-solid border-2 border-gray-50 max-w-3xl m-auto">
             <div class="max-w-md w-full">
                 <div class="flex items-center justify-center p-8">
                     <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
                 </div>
               <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Login Verification</h2>
-              <p class="text-black-500 my-8">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
+              <p class="text-black-500 dark:text-black-400 my-8 ">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
                 <br>  
                 Didn't receive a SMS?<br>
                 <br>
                 <a href="" class="text-sm text-booker hover:text-booker font-bold">Click here to send a new code</a></p>
-                <div class="flex items-center p-4 mb-4 text-green-800 rounded-lg bg-green-50" role="alert">
+                <div class="flex items-center p-4 mb-4 text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400" role="alert">
                   <div class="ms-3 text-sm font-bold">New login code has been sent via SMS</div>
-                  <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-3" aria-label="Close">
+                  <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-green-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-3" aria-label="Close">
                     <span class="sr-only">Close</span>
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
                     </svg>
                   </button>
                 </div>
-                <div class="flex items-center p-4 mb-4 text-blue-800 rounded-lg bg-blue-50" role="alert">
+                <div class="flex items-center p-4 mb-4 text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
                   <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
                   </svg>
@@ -92,7 +82,7 @@
                   <div class="ms-3 text-sm font-medium">
                     You will be able to request another code in 30 seconds
                   </div>
-                    <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-1" aria-label="Close">
+                    <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-1" aria-label="Close">
                       <span class="sr-only">Close</span>
                       <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
@@ -102,12 +92,14 @@
               <form class="space-y-4">
                 <div>
                   <label class="block text-sm font-bold text-black-700 mb-1">Verification Code</label>
-                  <input autocomplete="off" id="VerificationCode" maxlength="6" name="VerificationCode" type="text" value="" 
-                      class="w-full px-3 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all" required />
+                  <input 
+                    type="email" 
+                    class="w-full px-4 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    required />
                 </div>
 
-                <button class="w-full bg-booker text-white font-bold px-3 py-1.5 rounded-md transition-colors">Verify</button>
-                <button class="w-full bg-gray text-black font-bold px-3 py-1.5 rounded-md transition-colors">Cancel</button>
+                <button class="w-full bg-booker text-white font-bold py-2.5 rounded-md transition-colors">Verify</button>
+                <button class="w-full bg-gray text-black font-bold py-2.5 rounded-md transition-colors">Cancel</button>
               </form>
               <footer>
                 <div id="copyright" class="mt-3 flex items-center justify-center p-8">
