--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -93,7 +93,7 @@
                 <div>
                   <label class="block text-sm font-bold text-black-700 mb-1">Verification Code</label>
                   <input 
-                    type="email" 
+                    type="text" 
                     class="w-full px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
                     required />
                 </div>
