--- a/admin-portal/forgottenpassword.html
+++ b/admin-portal/forgottenpassword.html
@@ -42,7 +42,7 @@
     
     <body class="bg-transparent px-4 font-[Lato]">
         <div class="flex justify-center relative top-12 px-4 rounded-[50px] shadow-2xl border-solid border-2 border-gray-50 max-w-3xl m-auto">
-            <div class="max-w-md w-full">
+            <div class="sm:mx-auto sm:w-full sm:max-w-sm">
                 <div class="flex items-center justify-center p-8">
                     <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
                 </div>
