--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -49,14 +49,13 @@
     
     </head>
 
-    <body class="bg-transparent px-4 font-[Lato]">
-        <div class="flex justify-center relative top-12 px-4 rounded-[50px] shadow-2xl border-solid border-2 border-gray-50 max-w-3xl m-auto">
-            <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-                <div class="flex items-center justify-center p-8">
-                    <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
-                </div>
-              <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Administration Login</h2>
-              
+    <body class="bg-gray-100 px-4 font-[Lato]">
+      <div class="flex items-center justify-center p-8">
+        <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
+      </div>
+      <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Administration Login</h2>
+        <div class="flex justify-center bg-white relative rounded-[10px] border-solid border-2 border-gray-50 max-w-xl m-auto py-8">
+            <div class="max-w-md w-full">
               <form action="/admin/portal/login" method="post" autocomplete="disable-autocomplete" class="space-y-4">
                 <div>
                   <label class="block text-sm font-bold text-black-700 mb-1">User ID</label>
@@ -86,12 +85,12 @@
                   Sign In
                 </button>
               </form>
-              <footer>
-                <div id="copyright" class="mt-3 flex items-center justify-center p-8">
-                    <p>&copy; Booker 2025 - CD2</p>
-                </div>
-                </footer>
             </div>
           </div>
+          <footer>
+            <div id="copyright" class="mt-3 flex items-center justify-center p-8">
+                <p>&copy; Booker 2025 - CD2</p>
+            </div>
+          </footer>
     </body>
 </html>
