--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -54,8 +54,8 @@
         <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
       <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Administration Login</h2>
-        <div class="flex justify-center bg-white relative rounded-[10px] border-solid border-2 border-gray-50 max-w-xl m-auto py-8">
-            <div class="max-w-md w-full">
+        <div class="flex justify-center bg-white relative rounded-[10px] border-solid border-2 border-gray-50 max-w-lg m-auto py-8">
+            <div class="max-w-sm w-full">
               <form action="/admin/portal/login" method="post" autocomplete="disable-autocomplete" class="space-y-4">
                 <div>
                   <label class="block text-sm font-bold text-black-700 mb-1">User ID</label>
