--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -49,28 +49,28 @@
     
     </head>
 
-    <body class="bg-gray-100 px-4 font-[Lato]">
+    <body class="bg-gray-50 px-4 font-[Lato]">
       <div class="flex items-center justify-center p-8">
-        <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
+        <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
       <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Administration Login</h2>
-        <div class="flex justify-center bg-white relative rounded-[10px] border-solid border-2 border-gray-50 max-w-lg m-auto py-8">
+        <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12">
             <div class="max-w-sm w-full">
               <form action="/admin/portal/login" method="post" autocomplete="disable-autocomplete" class="space-y-4">
                 <div>
-                  <label class="block text-sm font-bold text-black-700 mb-1">User ID</label>
+                  <label class="block text-sm font-bold text-black-700">User ID</label>
                   <input autocomplete="disable-autocomplete" 
                     type="email" 
-                    class="w-full px-2 py-1.5 border border-gray-300 rounded-md focus:outline-2 focus:outline-offset-2 focus:outline-booker-500 active:bg-booker-700" data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" id="Username" maxlength="100" name="Username" type="text" value="" required/>
+                    class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md focus:outline-2 focus:outline-offset-2 focus:outline-booker-500 active:bg-booker-700" data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" id="Username" maxlength="100" name="Username" type="text" value="" required/>
                     <span class="asterisk pl-2 pt-2"></span>
                 </div>
           
                 <div>
-                  <label class="text-sm text-left font-bold text-black-700 mb-1">Password</label>
+                  <label class="text-sm text-left font-bold text-black-700">Password</label>
                     <span class="float-right"><a href="#" class="text-sm text-booker hover:text-booker font-bold">Forgot password?</a></span>
                   <input 
                     type="password" autocomplete="disable-autocomplete"
-                    class="w-full px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
                     required data-val="true" data-val-length="The field Password must be a string with a maximum length of 50." data-val-length-max="50" id="Password" maxlength="50" name="Password" type="password" value=""/>
                 </div>
 
