--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -70,7 +70,7 @@
                     <span class="float-right"><a href="#" class="text-sm text-booker hover:text-booker font-bold">Forgot password?</a></span>
                   <input 
                     type="password" autocomplete="disable-autocomplete"
-                    class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    class="w-full my-2 px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
                     required data-val="true" data-val-length="The field Password must be a string with a maximum length of 50." data-val-length-max="50" id="Password" maxlength="50" name="Password" type="password" value=""/>
                 </div>
 
