--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -81,7 +81,7 @@
                      data-size="invisible">
                 </div>
           
-                <button type="submit" class="w-full login-btn bg-booker text-white font-medium px-3 py-1.5 rounded-md transition-colors">
+                <button type="submit" class="w-full my-2 login-btn bg-booker text-white font-medium px-3 py-1.5 rounded-md transition-colors">
                   Sign In
                 </button>
               </form>
