--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -61,7 +61,7 @@
                   <label class="block text-sm font-bold text-black-700">User ID</label>
                   <input autocomplete="disable-autocomplete" 
                     type="email" 
-                    class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md focus:outline-2 focus:outline-offset-2 focus:outline-booker-500 active:bg-booker-700" data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" id="Username" maxlength="100" name="Username" type="text" value="" required/>
+                    class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md focus:outline-2 focus:outline-offset-2 focus:outline-booker-500" data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" id="Username" maxlength="100" name="Username" type="text" value="" required/>
                     <span class="asterisk pl-2 pt-2"></span>
                 </div>
           
@@ -70,7 +70,7 @@
                     <span class="float-right"><a href="#" class="text-sm text-booker hover:text-booker font-bold">Forgot password?</a></span>
                   <input 
                     type="password" autocomplete="disable-autocomplete"
-                    class="w-full my-2 px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    class="w-full mt-2 mb-4 px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
                     required data-val="true" data-val-length="The field Password must be a string with a maximum length of 50." data-val-length-max="50" id="Password" maxlength="50" name="Password" type="password" value=""/>
                 </div>
 
@@ -81,7 +81,7 @@
                      data-size="invisible">
                 </div>
           
-                <button type="submit" class="w-full my-2 login-btn bg-booker text-white font-medium px-3 py-1.5 rounded-md transition-colors">
+                <button type="submit" class="w-full my-2 login-btn bg-booker hover:bg-booker-600 text-white font-medium px-3 py-1.5 rounded-md transition-colors ">
                   Sign In
                 </button>
               </form>
