--- a/admin-portal/validation.html
+++ b/admin-portal/validation.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         
-        <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12">
+        <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12 p-8">
             <div class="max-w-sm w-full">
               <form action="/admin/portal/login" method="post" autocomplete="disable-autocomplete" class="space-y-4">
                 <div>
