--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -51,23 +51,24 @@
     }
 
         </style>
-    </hed>
+    </head>
     
-    <body class="bg-transparent px-4 font-[Lato]">
-        <div class="flex justify-center relative top-12 px-4 rounded-[50px] shadow-2xl border-solid border-2 border-gray-50 max-w-3xl m-auto">
-            <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-                <div class="flex items-center justify-center p-8">
-                    <img class="h-16 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
-                </div>
-              <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Login Verification</h2>
-              <p class="text-black-500 dark:text-black-400 my-8 ">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
-                <br>  
-                Didn't receive a SMS?<br>
-                <br>
-                <a href="" class="text-sm text-booker hover:text-booker font-bold">Click here to send a new code</a></p>
-                <div class="flex items-center p-4 mb-4 text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400" role="alert">
+    <body class="bg-gray-50 px-4 font-[Lato]">
+      <div class="flex items-center justify-center p-8">
+        <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
+      </div>
+      <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Login Verification</h2>
+      <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12 p-8">
+        <div class="max-w-sm w-full">
+
+      <p class="text-black-500 my-4">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
+      <br>  
+      Didn't receive a SMS?<br>
+      <br>
+      <a href="#" class="text-sm text-booker hover:text-booker font-bold">Click here to send a new code</a></p>
+                <div class="flex items-center p-4 mb-4 text-green-800 rounded-lg bg-green-50" role="alert">
                   <div class="ms-3 text-sm font-bold">New login code has been sent via SMS</div>
-                  <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-green-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-3" aria-label="Close">
+                  <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-3" aria-label="Close">
                     <span class="sr-only">Close</span>
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
@@ -82,7 +83,7 @@
                   <div class="ms-3 text-sm font-medium">
                     You will be able to request another code in 30 seconds
                   </div>
-                    <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-1" aria-label="Close">
+                    <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-1" aria-label="Close">
                       <span class="sr-only">Close</span>
                       <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
@@ -91,23 +92,24 @@
                 </div>
               <form class="space-y-4">
                 <div>
-                  <label class="block text-sm font-bold text-black-700 mb-1">Verification Code</label>
+                  <label class="block text-sm font-bold text-black-700">Verification Code</label>
                   <input 
                     type="text" 
-                    class="w-full px-2 py-1.5 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    class="w-full px-4 py-1.5 mt-2 mb-4 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
                     required />
                 </div>
 
-                <button class="w-full bg-booker text-white font-bold py-1.5 rounded-md transition-colors">Verify</button>
-                <button class="w-full bg-gray text-black font-bold py-1.5 rounded-md transition-colors">Cancel</button>
+                <button class="w-full bg-booker text-white font-bold py-2.5 rounded-md transition-colors">Verify</button>
+                <button class="w-full bg-gray text-black font-bold py-2.5 rounded-md transition-colors">Cancel</button>
               </form>
-              <footer>
-                <div id="copyright" class="mt-3 flex items-center justify-center p-8">
-                    <p>&copy; Booker 2025 - CD2</p>
-                </div>
-                </footer>
+    
             </div>
           </div>
+          <footer>
+            <div id="copyright" class="mt-3 flex items-center justify-center p-8">
+                <p>&copy; Booker 2025 - CD2</p>
+            </div>
+            </footer>
 
     </body>
 </html>
