--- a/admin-portal/forgottenpassword.html
+++ b/admin-portal/forgottenpassword.html
@@ -41,7 +41,7 @@
         </style>
     
     <body class="bg-gray-50 px-4 font-[Lato]">
-      <div class="flex items-center justify-center p-8">
+      <div class="flex items-center justify-center px-8 pt-4 pb-8">
         <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
       <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Forgotten Password</h2>
