--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -54,7 +54,7 @@
         <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
       <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Administration Login</h2>
-        <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12 p-8">
+        <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto p-8">
             <div class="max-w-sm w-full">
               <form action="/admin/portal/login" method="post" autocomplete="disable-autocomplete" class="space-y-4">
                 <div>
