--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -58,7 +58,7 @@
         <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
       <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Login Verification</h2>
-      <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto py-12 p-8">
+      <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto p-8">
         <div class="max-w-sm w-full">
 
       <p class="text-black-500 my-4">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
