--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -60,7 +60,7 @@
                 <div>
                   <label class="block text-sm font-bold text-black-700">User ID</label>
                   <input autocomplete="disable-autocomplete" 
-                    type="email" 
+                    type="text" 
                     class="w-full mt-2 px-2 py-1.5 border border-gray-300 rounded-md hover:border-booker-400 focus:outline-none focus:ring-1 focus:ring-booker-500 focus:border-blue-500" data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" id="Username" maxlength="100" name="Username" type="text" value="" required/>
                     <span class="asterisk pl-2 pt-2"></span>
                 </div>
