--- a/admin-portal/forgottenpassword.html
+++ b/admin-portal/forgottenpassword.html
@@ -12,6 +12,7 @@
             @theme {
               --color-booker: #2356AA;
             }
+            @import "tailwindcss"  prefix(tw);
           </style>
         <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
         <!-- Styles -->
@@ -40,21 +41,21 @@
     }
         </style>
     
-    <body class="bg-gray-50 px-4 font-[Lato]">
-      <div class="flex items-center justify-center px-8 pt-4 pb-8">
-        <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
+    <body class="tw:bg-gray-50 tw:px-4 tw:font-[Lato]">
+      <div class="tw:flex tw:items-center tw:justify-center tw:px-8 tw:pt-4 tw:pb-8">
+        <img class="tw:h-12 tw:flex tw:justify-center tw:items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
-      <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Forgotten Password</h2>
-      <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto p-8">
-        <div class="max-w-sm w-full">
-          <p class="text my-4">If you have forgotten your website login password, fill this page in with your registered user ID.</p>
-          <form class="space-y-4">
+      <h2 class="tw:text-2xl tw:font-bold tw:text-gray-900 tw:mb-8 tw:text-center">Forgotten Password</h2>
+      <div class="tw:flex tw:justify-center tw:bg-white tw:relative tw:border-solid tw:border tw:border-gray-50 tw:shadow-sm tw:border tw:border-slate-100 tw:rounded-lg tw:max-w-lg tw:m-auto tw:p-8">
+        <div class="tw:max-w-sm tw:w-full">
+          <p class="tw:text tw:my-4">If you have forgotten your website login password, fill this page in with your registered user ID.</p>
+          <form class="tw:space-y-4">
             <div>
-              <label class="block text-sm font-bold text-black-700 mb-1">Enter your user ID</label>
-              <input class="w-full px-4 py-2 mt-2 mb-4 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all" required data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" data-val-required="The Username field is required." id="Username" maxlength="100" name="Username" required="" type="text" value="" />
+              <label class="tw:block tw:text-sm tw:font-bold tw:text-black-700 tw:mb-1">Enter your user ID</label>
+              <input class="tw:w-full tw:px-4 tw:py-2 tw:mt-2 tw:mb-4 tw:border tw:border-gray-300 tw:rounded-md tw:focus:ring-2 tw:focus:ring-booker-500 tw:focus:border-booker-500 tw:outline-none tw:transition-all" required data-val="true" data-val-length="The field Username must be a string with a maximum length of 100." data-val-length-max="100" data-val-required="The Username field is required." id="Username" maxlength="100" name="Username" required="" type="text" value="" />
             </div>
             <div class="g-recaptcha" data-sitekey="6LfwwIQqAAAAANcF-qB9oAxVzaVwIum45H588zwK" data-callback="onSubmit" data-badge="inline" data-size="invisible"></div>
-              <button class="w-full my-2 bg-booker text-white font-medium py-1.5 rounded-md transition-colors">
+              <button class="tw:w-full tw:my-2 tw:bg-booker tw:text-white tw:font-medium tw:py-1.5 tw:rounded-md tw:transition-colors">
                 Sign In
               </button>
           </form>
@@ -62,7 +63,7 @@
         </div>
       </div>
       <footer>
-        <div id="copyright" class="mt-3 flex items-center justify-center p-8">
+        <div id="copyright" class="tw:mt-3 tw:flex items-center tw:justify-center tw:p-8">
           <p>&copy; Booker 2025 - CD2</p>
         </div>
       </footer>
