--- a/admin-portal/forgottenpassword.html
+++ b/admin-portal/forgottenpassword.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <footer>
-        <div id="copyright" class="tw:mt-3 tw:flex items-center tw:justify-center tw:p-8">
+        <div id="copyright" class="tw:mt-3 tw:flex tw:items-center tw:justify-center tw:p-8">
           <p>&copy; Booker 2025 - CD2</p>
         </div>
       </footer>
