--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Booker</title>
+        <title>Booker Admin Portal</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
