--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d24ac1d9-0917-4f14-847b-be52c018c867" data-custom-css="true" data-blockingmode="auto" type="text/javascript" nonce="wBS/U1LPQJy0/CviADP+FyCFyJkBVhqXzj9fbjErk7c="></script>
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d24ac1d9-0917-4f14-847b-be52c018c867" data-custom-css="true" data-blockingmode="auto" type="text/javascript" async></script>
 
         <title>Booker Admin Portal</title>
         
