--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-custom-css="true" data-blockingmode="auto" type="text/javascript" async></script>
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-blockingmode="auto" type="text/javascript" async></script>
 
         <title>Booker Admin Portal</title>
         
