--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,12 +3,12 @@
 
     <head>
         <meta charset="utf-8">
-        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-blockingmode="auto" type="text/javascript" async></script>
-
         <title>Booker Admin Portal</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-blockingmode="auto" type="text/javascript" async></script>
+        
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
           <style type="text/tailwindcss">
             @theme {
@@ -89,6 +89,7 @@
                   Sign In
                 </button>
               </form>
+                <script id="CookieDeclaration" src="https://consent.cookiebot.com/3eaa87f5-ce7b-40c3-bc07-d805436f36f6/cd.js" type="text/javascript" async></script>
             </div>
           </div>
           <footer>
