--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -47,6 +47,7 @@
         }
     }
         </style>
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-blockingmode="auto" type="text/javascript" async></script>
     
     </head>
 
@@ -87,8 +88,14 @@
                   Sign In
                 </button>
               </form>
-                <script id="CookieDeclaration" src="https://consent.cookiebot.com/3eaa87f5-ce7b-40c3-bc07-d805436f36f6/cd.js" type="text/javascript" async></script>
-                <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3eaa87f5-ce7b-40c3-bc07-d805436f36f6" data-blockingmode="auto" type="text/javascript" async></script>
+               <div id="cookieDeclaration" class="cookiebot"></div>
+
+                  <!-- Declaration loader -->
+  <script id="CookieDeclaration"
+          src="https://consent.cookiebot.com/3eaa87f5-ce7b-40c3-bc07-d805436f36f6/cd.js"
+          type="text/javascript"
+          async></script>
+            
             </div>
           </div>
           <footer>
