--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,6 +3,8 @@
 
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://consent.cookiebot.com; style-src 'self' 'unsafe-inline';">
+
         <title>Booker Admin Portal</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
