--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="">
+        <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline';">
 
         <title>Booker Admin Portal</title>
         
