--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline'; frame-src 'self' https://consentcdn.cookiebot.com;">
+        <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline' https://fonts.googleapis.com/; frame-src https://www.google.com/ https://consentcdn.cookiebot.com/;">
 
         <title>Booker Admin Portal</title>
         
