--- a/admin-portal/login/login.html
+++ b/admin-portal/login/login.html
@@ -3,7 +3,11 @@
 
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline' https://fonts.googleapis.com/; frame-src https://www.google.com/ https://consentcdn.cookiebot.com/;">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self';
+               script-src 'self' https://consent.cookiebot.com;
+               style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
+               connect-src https://*.cookiebot.com;
+               frame-src https://consent.cookiebot.com https://www.google.com;">
 
         <title>Booker Admin Portal</title>
         
