--- a/csp/index.html
+++ b/csp/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy"
       content="
-        default-src 'self';
-        script-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
+        default-src 'self' https:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://consent.cookiebot.com;
         style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
-        img-src 'self' 'unsafe-inline' https://imgsct.cookiebot.com;
+        img-src 'self' https://imgsct.cookiebot.com;
         connect-src https://*.cookiebot.com;
         frame-src https://consent.cookiebot.com;">
+
   <title>Cookiebot Test</title>
 
   <script id="Cookiebot"
