--- a/presell/eight-drops/index.html
+++ b/presell/eight-drops/index.html
@@ -21,7 +21,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" nonce="MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM=" />
 
-    <script src='/bundles/js?v=Y8rpuDHmicvQmyBtLFFbFUB0INgUL1yUL_z8SwyQ-qk1' nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM='></script>
+    <script src='https://www.booker.co.uk/bundles/js?v=Y8rpuDHmicvQmyBtLFFbFUB0INgUL1yUL_z8SwyQ-qk1' nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM='></script>
 
 
     <script type='text/javascript' src='https://static.queue-it.net/script/queueclient.min.js' nonce="MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM="></script>
