--- a/presell/eight-drops/index.html
+++ b/presell/eight-drops/index.html
@@ -1032,9 +1032,15 @@ System.Web.Mvc.StyleContext;
         max-height: 96px;
     }
 
-    @media (max-width: 1150px) {
-        main#presell_button .mobile-view .product-quantity-date .plus-minus-icon {
-            display: none;
+     @media (max-width: 1150px) {
+      
+      main#presell_button .mobile-view .product-quantity-date .plus-minus-icon {
+            width: 1em;
+            height: 1em;
+        }
+
+        main#presell_button .mobile-view .product .product-quantity-date {
+          width: 0;
         }
     }
 
