--- a/presell-management/index.html
+++ b/presell-management/index.html
@@ -91,7 +91,7 @@
     </select>
   </div>
 </div>
-<div class="row d-flex align-items-center mb-3 presellSelectedBranches">
+<div class="row d-flex align-items-center mb-3 presellSelectedBranches d-none">
   <div class="col-6">
     <p>Selected Branches</p>
   </div>
