--- a/presell-management/load-header/index.html
+++ b/presell-management/load-header/index.html
@@ -124,6 +124,8 @@
        divTsAndCs.classList.toggle('d-none');
        fileTsAndCs.disabled = !fileTsAndCs.disabled;
        textTsAndCs.disabled = !textTsAndCs.disabled;
+       fileTsAndCs.required = !fileTsAndCs.required;
+       textTsAndCs.required = !textTsAndCs.required;
     });
     
   </script>
