--- a/presell/management/new-header/index.html
+++ b/presell/management/new-header/index.html
@@ -80,13 +80,12 @@
 </div>
 <div class="row d-flex align-items-center mb-3">
   <div class="col-6">
-    Caterer / Retailer
+    Caterer Pre-sell
   </div>
   <div class="col-6">
    <select name="isCatererOrRetailer" id="isCatererOrRetailer">
       <option value="notApplicable">Not Applicable</option>
       <option value="caterer">Caterer</option>
-      <option value="retailer">Retailer</option>
     </select>
   </div>
 </div>
