--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1070,8 +1070,8 @@ System.Web.Mvc.StyleContext;
 <main id="presell_button" class="main mt-3">
     <div class="row">
         <div class="col-xs-12 col-lg-6">
-            <h2>Pre-Sell: Presell Test 2025</h2>
-            <h2>Closing Date: Sunday 1st June 2025</h2>
+            <h2>Pre-Sell: Christmas 2025</h2>
+            <h2>Closing Date: Monday 1st September 2025</h2>
         </div>
         <div class="col-xs-12 col-lg-6 d-inline-flex">
             <div class="form-check">
